--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Lastname Firstname: 225</title>
+    <title>Holland, John: 225</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/starter-template/">
     <!-- Bootstrap core CSS -->
     <link href="css/styles.css" rel="stylesheet">
@@ -15,9 +15,9 @@
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
 </head>
-<body>
+<body class="bg-light-beige">
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">Firstname Lastname</a>
+    <a class="navbar-brand" href="#">John Holland</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -27,16 +27,13 @@
                 <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-            <li class="nav-item">
                 <a class="nav-link" href="grid.html">Grid</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="components.html">Carousel</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="about.html">About</a>
+                <a class="nav-link active" aria-current="page" href="about.html">About</a>
             </li>
         </ul>
     </div>
@@ -49,9 +46,9 @@
 
     <script>
         const user = {
-            name: '',
-            imageUrl: '',
-            bio: ''
+            name: 'John Holland',
+            imageUrl: 'images/About.webp',
+            bio: 'I’m a seasoned telecom professional with over 25 years in the industry, but I’ve never stopped building toward what’s next. When I’m not navigating the world of connectivity or enjoying life with my spouse and three children, you’ll likely find me lost in a book or immersed in my latest Lego build. I’m a firm believer that you’re never too far along in your career to pivot or grow, a philosophy I’m putting into practice as I work toward finishing my degree by December 2026.'
         };
 
         // Step one - Create a React element
